--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -848,8 +848,8 @@ server {
         rewrite ^/doc/gan/stylegan/(?<old>.*)$ /doc/ai/nn/gan/stylegan/$old permanent;
         rewrite ^/(?<old>.*)，.*$ /$old permanent;
         rewrite ^/Docs?/(?<old>.*)$ /doc/$old permanent;
-        rewrite ^/\.\/(?<old>.*)$ /$old permanent; # eg '/./Complement' 404s
-        rewrite ^/(?<page>.*)@(?<anchor>.*)$ /$page#$anchor permanent; # eg '/review/movie@all-about-eve' - for some reason, '#' fragments often get translated to '@'. Haven't figured out who or why.
+        rewrite ^/\.\/(?<old>.*)$ /$old permanent; # eg. '/./Complement' 404s
+        rewrite ^/(?<page>.*)@(?<anchor>.*)$ /$page#$anchor permanent; # eg. '/review/movie@all-about-eve' - for some reason, '#' fragments often get translated to '@'. Haven't figured out who or why.
         rewrite ^/(?<page>doc/psychology/okcupid/.*\.html).+$ /$page permanent; # the ingenuity of people coming up with new typos on OKC archives is astounding
         rewrite ^/(?<page>doc/psychology/.*)\.htm$ /$page.html permanent;
         rewrite ^/(?<old>.*\.pdf)(Just|this|it|there|as|you|me|if|on|special|the|in|link|they|og|2|also|for|3|\.html|abstractlike|sorry|please|replydelete|[Hh]e|[Ss]he|Nebula|Social|Since)$ /$old permanent;
