--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17167,7 +17167,6 @@
 "~^/static/font/dropcap/gene-wolfe/light/V-51.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-18.svg";
 "~^/Sunk-cos$" "/sunk-cost";
 "~^/nenex/$" "/nenex";
-
 "~^/doc/iq/ses/1957-shockley.pdf%5C.*$" "/doc/iq/ses/1957-shockley.pdf";
 "~^/doc/statistics/decision/2016-08-20-0$" "/doc/statistics/decision/2016-08-20-candyjapan-decisiontree-n9.csv";
 "~^/doc/lesswrong-survey/2013-07-22-182$" "/doc/lesswrong-survey/2013-07-22-sand-lwpoll.csv";
@@ -17254,8 +17253,151 @@
 "~^/twdne/.*$" "/twdne";
 "~^/doc/melatonin/2016-boergers\.pdf.*$" "/doc/melatonin/2014-boergers.pdf";
 "~^/wiki.wardepartmentpapers.org.*$" "/static/404";
+"~^/rubiiks-cube$" "/rubiks-cube";
+"~^/rubiiks-cube-claude$" "/rubiks-cube-claude";
+"~^/[Rr][dD][wW]eb/.*$" "/static/404";
+"~^/.*/LSD-microdosing$" "/lsd-microdosing";
+"~^/indexwordpress.*$" "/index";
+"~^/gw.pagelayoutdidcomplete$" "/static/404";
+"~^/doc/music/music-distraction/2012-shih$" "/doc/music/music-distraction/2012-shih.pdf";
+"~^/DNB-FAQ.html$" "/dnb-faq";
+"~^/NEW$" "/changelog";
+"~^/static/extracts-options$" "/static/extracts-options.js";
+"~^/doc/personal/2011-gwern-yourmorals.org/aos_process.html/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/personal/2011-gwern-yourmorals.org/5f_new2_process.html/favicon.ico$" "/static/img/favicon.ico";
+"~^/Tryron$" "/tryon";
+"~^/tracker$" "/static/404";
+"~^/5intro.htm.*$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/5intro.htm";
+"~^/doc/math/1986-bentley.pdf%5C.*$" "/doc/math/1986-bentley.pdf";
+"~^/writings/changes$" "/changelog";
+"~^/static/img/worddoc.svg$" "/static/img/icon/word-doc.svg";
+"~^/Short-story-on-the-limits-of-propaganda.*$" "/doc/culture/1983-wolfe-thecitadeloftheautarch-thejustman";
+"~^/.*/Blackmail$" "/blackmail";
+"~^/static/redirect/~%5E/images/gan/stylegan/2019-03-15-stylegan-faces-interpolation.mp4%E3%80%81$" "/doc/ai/nn/gan/stylegan/anime/2019-03-15-gwern-stylegan-faces-interpolation.mp4";
+"~^/static/build/.*scratch$" "/static/build/index";
+"~^/Questions/.*$" "/questions";
+"~^/Nootropics&hash.*$" "/nootropic";
+"~^/%E2%80%8BDNM-%E2%80%8Bsurv.*$" "/dnm-survival";
+"~^/doc/typography/rubrication/index$" "/doc/design/typography/rubrication/index";
+"~^/doc/tea-mineralwater-posteriors.png$" "/doc/nootropic/quantified-self/gwern-tea-mineralwater-posteriors.jpg";
+"~^/doc/psychology/personality/psychopathy/1942-cleckley-maskofsanity\.pdf.*$" "/doc/psychology/personality/psychopathy/1941-cleckley-maskofsanity.pdf";
+"~^/doc/psychology/nature/2010-peen.pdf%5C%5C%5C.*$" "/doc/psychology/nature/2010-peen.pdf";
+"~^/doc/psychology/2019_letexier.pdf/.*$" "/doc/psychology/2019-letexier.pdf";
+"~^/doc/iq/high/smpy/1986-renzulli-systemsandmodelsforprogramsforgif$" "/doc/iq/high/smpy/1986-renzulli-systemsandmodelsforprogramsforgiftedtalented.pdf";
+"~^/doc/existential-risk/2013-dA.*$" "/doc/existential-risk/index";
+"~^/doc/dunbar/1999-dunbar\.pdf.*$" "/static/404";
+"~^/doc/Di.*$" "/doc/index";
+"~^/doc/cs/lisp/w.*$" "/doc/cs/lisp/index";
+"~^/doc/cs/linkrot/cs/linkrot/2011-muax-backup\.pdf.*$" "/doc/cs/linkrot/archiving/2011-muflax-backup.pdf";
+"~^/doc/cs/algorithm/ai/diffusion/index$" "/doc/ai/diffusion/index";
+"~^/doc/ai/scaling/hardware/2021-norrie-\.pdf.*$" "/doc/ai/scaling/hardware/2021-norrie.pdf";
+"~^/doc/ai/retrieval$" "/doc/ai/retrieval/index";
+"~^/doc/ai/2020-07-24-meme-moneyprinter-bitterlesson-gpt3.png$" "/doc/ai/nn/cnn/2020-07-24-gwern-meme-moneyprinter-bitterlesson-gpt3.png";
+"~^/Bitcoin-is-Worse-isBetter$" "/bitcoin-is-worse-is-better";
+"~^/Cdlture-is-not-about-Esthetics$" "/culture-is-not-about-esthetics";
+"~^/Danbo$" "/danbooru";
+"~^/Self$" "/self-decrypting";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjournevy5-cats-t-dark-5.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-21-gwern-midjournevy5-cats-t-dark-5.jpg";
+"~^/doc/6.*-nakamoto$" "/doc/bitcoin/2008-nakamoto";
+"~^/doc/cat/catnip/survey/2017-689$" "/doc/cat/catnip/survey/index";
+"~^/doc/genetics/heritable/1984-busstemperamentearlydevelopingpersonalitytraits\.pdf.*$" "/doc/genetics/heritable/1984-buss-temperamentearlydevelopingpersonalitytraits.pdf";
+"~^/doc/iq/1927-spearmantheabilitiesofman\.pdf.*$" "/doc/iq/1927-spearman-theabilitiesofman.pdf";
+"~^/doc/ifrench-school-ask-for-iq-testq/2019-platt\.pdf.*$" "/doc/iq/2019-platt.pdf";
+"~^/doc/iq/1993-huitema\.pdf.*$" "/doc/iq/ses/1993-huitema.pdf";
+"~^/doc/longevity/2019-d$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/-melatonin/2005-brzezinski.pd\f$" "/doc/melatonin/2005-brzezinski.pdf";
+"~^/.*/MLP$" "/mlp";
+"~^/doc/psychology/2020-bellet.pd\f$" "/doc/psychology/2020-bellet.pdf";
+"~^/doc/spaced-repetition-forgetting-curves.svg$" "/doc/psychology/spaced-repetition/gwern-forgetting-curves.png";
+"~^/doc/2001-hochreiter\.pdf.*$" "/doc/reinforcement-learning/meta-learning/2001-hochreiter.pdf";
+"~^/doc/rotten.com/library/nazi/$" "/doc/rotten.com/library/nazi/index.html";
+"~^/doc/sunkcosts/1998garland\.pdf.*$" "/doc/sunk-cost/1998-garland.pdf";
+"~^/gpt-2-music/$" "/gpt-2-music";
+"~^/smpy/$" "/smpy";
+"~^/improvements.md$" "/improvement.md";
+"~^/mail$" "/links#contact";
+"~^/email$" "/links#contact";
+"~^/newsle$" "/newsletter/index";
+"~^/notes.md$" "/note/note.md";
+"~^/statistical-notes.md$" "/notes/statistic";
+"~^/on-really-trying/$" "/on-really-trying";
+"~^/order-statistic/$" "/order-statistic";
+"~^/see$" "/unseeing";
+"~^/Silk-Roa$" "/silk-road";
+"~^/sitemaps/$" "/sitemap.xml";
+"~^/socks/$" "/socks";
+"~^/static/font/HansaGothic.ttf$" "/static/font/blackletter/HansaGothic.ttf";
+"~^/doc/reinforcement-learning/openai/favicon.ico$" "/static/img/favicon.ico";
+"~^/otaku/favicon.ico$" "/static/img/favicon.ico";
+"~^/newsletter/2020/06/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/economics/advertising/favicon.ico$" "/static/img/favicon.ico";
+"~^/static/img/moon-solid.svg$" "/static/img/icon/moon-solid.svg";
+"~^/static/img/logo-favicon.svg$" "/static/img/logo/logo-favicon.svg";
+"~^/static/img/japanesecrest-tsukinihoshi-dottedmoon.svg$" "/static/img/ornament/japanesecrest-tsukinihoshi-dottedmoon.svg";
+"~^/Sunk-Costs$" "/sunk-cost";
+"~^/unseeing/$" "/unseeing";
+"~^/doc/technology/2005-shirky-agroupisit$" "/doc/technology/2005-shirky-agroupisitsownworstenemy.pdf";
+"~^/.*/The-Narrowing-Circle$" "/the-narrowing-circle";
+"~^/doc/cat/catnip/survey/2017-08-%C2%BF$" "/doc/cat/catnip/survey/index";
+"~^/static/blackletter/$" "/static/font/blackletter/index";
+"~^/.*/DNB-FAQ$" "/dnb-faq";
+"~^/doc/genetics/heritable/1984-buss-temperamentearly$" "/doc/genetics/heritable/1984-buss-temperamentearlydevelopingpersonalitytraits.pdf";
+"~^/DNM-arrests-since-.*" "/dnm-arrests";
+"~^/Tool-AI\?.*$" "/tool-ai";
+"~^/soylent/library/death/suicide/famous$" "/doc/rotten.com/library/death/suicide/famous/index.html";
+"~^/presocratic-path-to-atomism\?.*$" "/atomism";
+"~^/.*zeo/Caffeine$" "/zeo/caffeine";
+"~^/nootropic/styles.css$" "/static/404";
+"~^/.*/Charity-is-not-about-helping$" "/charity-is-not-about-helping";
+"~^/Epigrams\?.*$" "/epigrams";
+"~^/doc/zeo/2009-xqoxPrwr$" "/doc/zeo/index";
+"~^/doc/technology/2018-07-25-TQEmOHLo$" "/doc/technology/2018-07-25-johnbackus-howdecentralizationevolves.html";
+"~^/doc/sr/2014-11-09$" "/doc/darknet-market/2014-11-09-deepdotweb-pedofunding.html";
+"~^/doc/spacedrepetition/1989-gilm$" "/doc/psychology/spaced-repetition/1989-gilmore-memoryaginganddementia.pdf";
+"~^/doc/rotten.com/library/journalists/$" "/doc/rotten.com/library/journalists/index.html";
+"~^/doc/rotten.com/library/dictators/$" "/doc/rotten.com/library/bio/dictators/index.html";
+"~^/doc/rotten.com/library/conspiracy/illuminati/index$" "/doc/rotten.com/library/conspiracy/illuminati/index.html";
+"~^/doc/rotten.com/library/bio/crime/mafia/Santos_Trafficante_Jr$" "/doc/rotten.com/library/bio/crime/mafia/Santos_Trafficante_Jr./index.html";
+"~^/doc/rotten.com/library/bio/crime/mafia/Jack$" "/doc/rotten.com/library/bio/crime/mafia/Jack_/index.html";
+"~^/doc/psychology/doctors/member1.html$" "";
+"~^/doc/personal/%EF%BF%BD$" "/doc/personal/index";
+"~^/doc/logo.svg$" "/static/img/logo/logo.svg";
+"~^/doc/iq/high/smpy/1984-clements.pdf%D0.*$" "/doc/iq/high/smpy/1984-clements.pdf";
+"~^/doc/genetics/selection/www.mountimprobable.com/about/index$" "/doc/genetics/selection/www.mountimprobable.com/about/index.html";
+"~^/doc/darknet-market/2013-07-cm.*$" "/doc/darknet-market/";
+"~^/doc/anime/power.29$" "/doc/anime/index";
+"~^/Differences\?.*$" "/differences";
+"~^/lang$" "/language";
+"~^/dnm-arrests.md$" "/dnm-arrest.md";
+"~^/doc/ai/sca$" "/doc/ai/scaling/index";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-12-gwern-midjourneyv5-robot-samples-3.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-12-gwern-midjourneyv5-robot-samples-3.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-20-gwern-midjourneyv5-snowymountainpasswithdogtracksleadingintothedistance-square-2.png$" "/doc/ai/nn/diffusion/midjourney/landscape/2023-10-20-gwern-midjourneyv5-snowymountainpasswithdogtracksleadingintothedistance-square-2.jpg";
+"~^/doc/ai/1988-lang$" "/doc/ai/nn/fully-connected/1988-lang.pdf";
+"~^/doc/psychology/eva/2002-takeda-notenkimemoirs$" "/doc/anime/eva/2002-takeda-notenkimemoirs";
+"~^/doc/darknet-market/2011-06-25-0$" "/doc/darknet-market/index";
+"~^/doc/darknet-market/2011-12-1$" "/doc/darknet-market/index";
+"~^/doc/darknet-market/2011-06-21$" "/doc/darknet-market/index";
+"~^/doc/economics/1688-delavega-confusi$" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
+"~^/doc/genetics/2015-ioannou\.pdf.*$" "/doc/genetics/selection/2015-ioannou.pdf";
+"~^/doc/iq/2013-bou$" "/doc/iq/2013-bouchard.pdf";
+"~^/doc/iq/1995-%C2%BF$" "/doc/iq/index";
+"~^/doc/longevity/2019-decabo$" "/doc/longevity/2019-decabo.pdf";
+"~^/doc/psychology/1949-stouffer-theamericansoldier-v1$" "/doc/psychology/1949-stouffer-theamericansoldier-v1-adjustmentduringarmylife.pdf";
+"~^/doc/psychology/ling$" "/doc/psychology/linguistics/index";
+"~^/doc/psychology/2015-07-%C3%B0$" "/doc/psychology/index";
+"~^/doc/psychology/okcupid/howyo$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/drusg$" "/drug-heuristics";
+"~^/facea$" "/face";
+"~^/hykall$" "/static/build/hakyll";
+"~^/newsletter/2018/13/$" "/newsletter/2018/index";
+"~^/newsletter/2020/05/$" "/newsletter/2020/05";
+"~^/review/bakerwell$" "/review/bakewell";
+"~^/sicp/Chapter-%C3%B0$" "/sicp/index";
+"~^/static/css/include/index$" "/static/index";
+"~^/agi-gpt$" "/doc/ai/nn/transformer/gpt/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
+"~/.*/mraid.js$" "/static/404";
 "~^/2EF8E3DF.*$" "/static/404";
 "~^/.*mailto:.*$" "/static/404";
 "~^/.*/\.git/.*$" "/static/404";
