finish up aborted move of /doc/music/music-distraction/ -> /doc/psychology/music/distraction/

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -764,7 +764,7 @@ server {
         rewrite ^/image/ai/diffusion/(?<old>.*)$ /image/ai/nn/diffusion/$old permanent;
         rewrite ^/doc/japanese/(?<old>.*)$ /doc/japan/$old permanent;
         rewrite ^/doc/japan/zeami/(?<old>.*)$ /doc/japan/poetry/zeami/$old permanent;
-        rewrite ^/doc/music-distraction/(?<old>.*)$ /doc/music/music-distraction/$old permanent;
+        rewrite ^/doc/music-distraction/(?<old>.*)$ /doc/psychology/music/distraction/$old permanent;
         rewrite ^/doc/nature/(?<old>.*)$ /doc/psychology/nature/$old permanent;
         rewrite ^/doc/humor/(?<old>.*)$ /doc/fiction/humor/$old permanent;
         rewrite ^/doc/statistics/comparison/(?<old>.*)$ /doc/statistics/order/comparison/$old permanent;
@@ -981,6 +981,7 @@ server {
         rewrite ^/doc/www/scribe\.rip/(?<old>.*)$ /doc/www/freedium.cfd/$old permanent;
         rewrite ^/(?<old>.*)~$ /$old permanent;
         rewrite ^/(?<old>.*)/guestbook$ /$old/index permanent;
+        rewrite ^/doc/music/music-distraction/(?<old>.*)$ /doc/psychology/music/distraction/$old permanent;
 
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
