--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17395,6 +17395,18 @@
 "~^/sicp/Chapter-%C3%B0$" "/sicp/index";
 "~^/static/css/include/index$" "/static/index";
 "~^/agi-gpt$" "/doc/ai/nn/transformer/gpt/index";
+"~^/[Oo]vas.*$" "/ova";
+"~^/Ova$" "/ova";
+"~^/[Uu]gly-?[Aa]nimes.*$" "/ugly-anime";
+"~^/Ugly.*$" "/ugly-anime";
+"~^/ugly$" "/ugly-anime";
+"~^/anime-ugly.*$" "/ugly-anime";
+"~^/[Yy]amato.*$" "/review/space-battleship-yamato";
+"~^/[Ss]pace.*[Bb]attleship.*$" "/review/space-battleship-yamato";
+"~^/review/[Yy]amato.*$" "/review/space-battleship-yamato";
+"~^/review/[Bb]attleship.*$" "/review/space-battleship-yamato";
+"~^/review/spacebattleshipyamato.*$" "/review/space-battleship-yamato";
+"~^/doc/rotten.com/library/bio/presidents/-ronald-reagan/index.*$" "/doc/rotten.com/library/bio/presidents/ronald-reagan/index.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*/mraid.js$" "/static/404";
