--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11458,3 +11458,5 @@ default "";
 "~^/doc/ai/nn/sparsity/pruning/2024-chang-figure3-lotteryticketsemergeearlyintrainingandthengetupweighted.png.*$" "/doc/ai/nn/sparsity/pruning/2024-chang-figure3-lotteryticketsemergeearlyintrainingandthengetupweighted.jpg";
 "~/static/build/sync-gwern.net.sh.html$" "/static/build/sync.sh.html";
 "~/static/build/sync-gwern.net.sh$" "/static/build/sync.sh";
+"~^/doc/darknet-market/2021-shah.pdf.*$" "/doc/darknet-market/alphabay/2021-shah.pdf";
+"~^/doc/darknet-market/2021-nazah.pdf.*$" "/doc/darknet-market/blackmarket-reloaded/2021-nazah.pdf";
