--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11460,3 +11460,4 @@ default "";
 "~/static/build/sync-gwern.net.sh$" "/static/build/sync.sh";
 "~^/doc/darknet-market/2021-shah.pdf.*$" "/doc/darknet-market/alphabay/2021-shah.pdf";
 "~^/doc/darknet-market/2021-nazah.pdf.*$" "/doc/darknet-market/blackmarket-reloaded/2021-nazah.pdf";
+"~^/doc/darknet-market/2021-harinam.pdf.*$" "/doc/darknet-market/dnm-archive/2021-harinam.pdf";
