--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17359,7 +17359,7 @@
 "~^/doc/rotten.com/library/conspiracy/illuminati/index$" "/doc/rotten.com/library/conspiracy/illuminati/index.html";
 "~^/doc/rotten.com/library/bio/crime/mafia/Santos_Trafficante_Jr$" "/doc/rotten.com/library/bio/crime/mafia/Santos_Trafficante_Jr./index.html";
 "~^/doc/rotten.com/library/bio/crime/mafia/Jack$" "/doc/rotten.com/library/bio/crime/mafia/Jack_/index.html";
-"~^/doc/psychology/doctors/member1.html$" "";
+"~^/doc/psychology/doctors/member1.html$" "/static/404";
 "~^/doc/personal/%EF%BF%BD$" "/doc/personal/index";
 "~^/doc/logo.svg$" "/static/img/logo/logo.svg";
 "~^/doc/iq/high/smpy/1984-clements.pdf%D0.*$" "/doc/iq/high/smpy/1984-clements.pdf";
@@ -17407,9 +17407,74 @@
 "~^/review/[Bb]attleship.*$" "/review/space-battleship-yamato";
 "~^/review/spacebattleshipyamato.*$" "/review/space-battleship-yamato";
 "~^/doc/rotten.com/library/bio/presidents/-ronald-reagan/index.*$" "/doc/rotten.com/library/bio/presidents/ronald-reagan/index.html";
+"~^/doc/predictions/2001-armstrong$" "/doc/statistics/prediction/2001-armstrong-principlesforecasting.pdf";
+"~^/doc/youtu.be/-tDBsbSKIJ8$" "/static/404";
+"~^/doc/iq/1993-carroll-humancognitiveabilitiessurveyfactoranalyticstudies\.pdf.*$" "https://libgen.rs/book/index.php?md5=68727D272142F87D0F157EF5C917F0F3";
+"~^/doc/darknet-market/2st.*$" "/doc/darknet-market/index";
+"~^/doc/darknet-market/2011-06-25-aakoven$" "/doc/darknet-market/2011-06-25-aakoven.mht";
+"~^/Terrorism-is-not-abou$" "/terrorism-is-not-about-terror";
+"~^/static/build/hakyll$" "/static/build/hakyll.hs";
+"~^/.*/Console-Insurance$" "/console-insurance";
+"~^/.*/\$escaped-url\$$" "/static/404";
+"~^/indexasdf.*$" "/index";
+"~^/doc/technology/2018-07-25-g0.*$" "/doc/technology/2018-07-25-johnbackus-howdecentralizationevolves.html";
+"~^/doc/statistics/decision/1983-howard$" "/doc/statistics/decision/1983-howard-readingsondecisionanalysis-v1.pdf";
+"~^/doc/sociology/2021-%C3%82.*$" "/doc/sociology/index";
+"~^/doc/sociology/2014-meganc-obsessedbenedictcumberbatchfanstriedtohavemefired$" "/doc/sociology/2014-meganc-obsessedbenedictcumberbatchfanstriedtohavemefired.html";
+"~^/doc/rotten.com/library/historical/$" "/doc/rotten.com/library/bio/historical/index.html";
+"~^/doc/qD.*$" "/doc/index";
+"~^/doc/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave$" "/doc/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
+"~^/doc/modafinil/1994-de-s%EF%BF%BD%EF%BF%BDr%EF%BF%BD%EF%BF%BDville\.pdf.*$" "/doc/modafinil/1994-desereville.pdf";
+"~^/doc/lesswrong-survey/2013-07-22-%C3.*$" "/doc/lesswrong-survey/2013-07-22-sand-lwpoll.csv";
+"~^/doc/history/%EF.*$" "/doc/history/index";
+"~^/doc/genetics/fE.*$" "/doc/genetics/index";
+"~^/doc/.*/Potassium$" "/zeo/potassium";
+"~^/doc/darknet-market/sP.*$" "/doc/darknet-market/index";
+"~^/.*data:image/vnd.microsoft.icon;base64,.*$" "/static/404";
+"~^/doc/darknet-market/2013-cg.*$" "/doc/darknet-market/index";
+"~^/doc/darknet-market/2013-07-JW.*$" "/doc/darknet-market/index";
+"~^/doc/darknet-market/2013-07-64.*$" "/doc/darknet-market/index";
+"~^/doc/darknet-market/2012-04-QW.*$" "/doc/darknet-market/index";
+"~^/doc/darknet-market/2011-06-nR.*$" "/doc/darknet-market/index";
+"~^/doc/cs/hardware/2006-bejan\.pdf.*$" "/doc/cs/hardware/index";
+"~^/doc/cs/algorithm/ai/nn/gan/biggan/index$" "/doc/ai/nn/gan/biggan/index";
+"~^/doc/2007-wolfe%C3.*$" "/doc/culture/2007-wolfe";
+"~^/collectors$" "/collecting";
+"~^/Danbooru2021magnet$" "/danbooru2021#download";
+"~^/doc/ai/1962T$" "/doc/ai/1962-bryson.pdf";
+"~^/doc/darknet-market/2011-06-21-1$" "/doc/darknet-market/2011-06-21-pgpkeys.maff";
+"~^/doc/darknet-market/2013-05$" "/doc/darknet-market/index";
+"~^/doc/darknet-market/2011-08-25-0$" "/doc/darknet-market/index";
+"~^/doc/darknet-market/2011-06-25-1$" "/doc/darknet-market/index";
+"~^/doc/fiction/indexd$" "/doc/fiction/index";
+"~^/doc/genetics/2016-yin\.pdf.*$" "/doc/genetics/editing/2016-yin.pdf";
+"~^/gwasheritability$" "/doc/genetics/heritability/index";
+"~^/doc/genetics/2017-wehby\.pdf.*$" "/doc/genetics/heritable/2017-wehby.pdf";
+"~^/doc/genetics/2014-simons-supplementary\.pdf.*$" "/doc/genetics/selection/2014-simons-supplementary.pdf";
+"~^/doc/-melatonin/2005-brzezinski.pd%5Cf$" "/doc/melatonin/2005-brzezinski.pdf";
+"~^/doc/personal/%C2%BF$" "/doc/personal/index";
+"~^/doc/personal/2011-%C3%B0$" "/doc/personal/index";
+"~^/doc/per$" "/doc/personal/index";
+"~^/doc/sociology/2021-%C3%B0$" "/doc/psychology/index";
+"~^/doc/psychology/%C3%B0$" "/doc/psychology/index";
+"~^/docspsychology/1941-cleckley-maskofsanity\.pdf.*$" "/doc/psychology/personality/psychopathy/1941-cleckley-maskofsanity.pdf";
+"~^/controlproblem.js$" "/doc/reinforcement-learning/armstrong-controlproblem/index.html";
+"~^/7grounds.htm$" "/doc/rotten.com/library/history/political-scandal/lewinsky-affair/Starr_Report/7grounds.html";
+"~^/doc/statistics/2013-dunson\.pdf.*$" "/doc/statistics/bayes/2013-dunson.pdf";
+"~^/fiction/batmn$" "/fiction/batman";
+"~^/fiction/the-buddhas-wheel.md$" "/fiction/buddhas-wheel";
+"~^/fiction/The-La$" "/fiction/the-last-muezzin";
+"~^/GPT_3$" "/gpt-3";
+"~^/nootropics.md$" "/nootropic/nootropics.md";
+"~^/note/IQ$" "/doc/iq/ses/index";
+"~^/Scaling-hypotheis$" "/scaling-hypothesis";
+"~^/ed-repe---ion$" "/spaced-repetition";
+"~^/static/font/dropcap/ninit/light/C-abstract-7.svg$" "/static/font/dropcap/ninit/light/C-abstract-light-7.svg";
+"~^/static/img/icon/arrow-lef-thick.svg$" "/static/img/icon/arrow-right.svg";
+"~^/gwas$" "/doc/genetics/heritable/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
-"~/.*/mraid.js$" "/static/404";
+"~^/.*/mraid.js$" "/static/404";
 "~^/2EF8E3DF.*$" "/static/404";
 "~^/.*mailto:.*$" "/static/404";
 "~^/.*/\.git/.*$" "/static/404";
