--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -17472,6 +17472,76 @@
 "~^/static/font/dropcap/ninit/light/C-abstract-7.svg$" "/static/font/dropcap/ninit/light/C-abstract-light-7.svg";
 "~^/static/img/icon/arrow-lef-thick.svg$" "/static/img/icon/arrow-right.svg";
 "~^/gwas$" "/doc/genetics/heritable/index";
+"~^/doc/about/publications.html$" "https://web.archive.org/web/20020209100404/publications.html";
+"~^/doc/contact.html$" "https://web.archive.org/web/20020209100404/contact.html";
+"~^/doc/education.html$" "https://web.archive.org/web/20020209100404/education.html";
+"~^/doc/policyidx.html$" "https://web.archive.org/web/20020209100404/policyidx.html";
+"~^/doc/biology/preventidx.html/robota.txt$" "/robots.txt";
+"~^/doc/ritonavir.html$" "https://web.archive.org/web/20020209100404/ritonavir.html";
+"~^/doc/biology/clinpracidx.html$" "https://web.archive.org/web/20020209100404/clinpracidx.html";
+"~^/doc/V4.*$" "/doc/index";
+"~^/doc/biology/vloadidx.html$" "https://web.archive.org/web/20020209100404/vloadidx.html";
+"~^/doc/biology/i-med/index$" "https://web.archive.org/web/20020209100404/";
+"~^/doc/biology/drugindex.html$" "https://web.archive.org/web/20020209100404/drugindex.html";
+"~^/doc/biology/clinmgtidx.html$" "https://web.archive.org/web/20020209100404/clinmgtidx.html";
+"~^/doc/biology/about/galen10322.html$" "https://web.archive.org/web/20020209100404/about/galen10322.html";
+"~^/doc/anime/eva/indexmemberlist.php$" "/doc/anime/eva/index";
+"~^/actions.json$" "/static/404";
+"~^/static/img/logo/logo-whitebg-large-border.png-530px.jpg/$" "/static/img/logo/logo-whitebg-large-border.png";
+"~^/static/img/icon/manicule-whiterightpointingindex.svg$" "/static/img/icon/manicule-right.svg";
+"~^/static/build/externalize_link_bibliography.php$" "/static/build/generateLinkBibliography.hs";
+"~^/.*/Death-Note-script$" "/death-note-script";
+"~^//index.php\?m.*$" "/index";
+"~^/doc/uT.*$" "/doc/index";
+"~^/doc/tutorial/%EF.*$" "/doc/tutorial/index";
+"~^/doc/rotten.com/library/bio/presidents/abraham-lincoln/styles.css$" "/doc/rotten.com/library/bio/presidents/abraham-lincoln/index.html";
+"~^/doc/reinforcement-learning/deepmind/model$" "/doc/reinforcement-learning/deepmind/index";
+"~^/doc/psychology/linguistic%E3%84%B4.*$" "/doc/psychology/linguistics/index";
+"~^/doc/longevity/%EF%B.*$" "/doc/longevity/index";
+"~^/doc/biology/guidelines.html$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-light-final.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-light-final.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-light-3.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-light-final.jpg";
+"~^/design%E2%80.*$" "/design";
+"~^/archivin$" "/archiving";
+"~^/Changelog%5C$" "/changelog";
+"~^/dnm-archive/$" "/dnm-archive";
+"~^/doc/ai/2019-0$" "/doc/ai/index";
+"~^/doc/smpy/index$" "/doc/iq/high/smpy/index";
+"~^/doc/ask.html$" "/doc/biology/2000-iapac-norvir/ask.html";
+"~^/doc/biology/committee.html$" "/doc/biology/2000-iapac-norvir/committee.html";
+"~^/doc/biology/about/physref.html$" "/doc/biology/2000-iapac-norvir/physref.html";
+"~^/doc/portability.html$" "/doc/biology/2000-iapac-norvir/portability.html";
+"~^/doc/biology/about/portability/farthingport.html$" "/doc/biology/2000-iapac-norvir/portability/farthingport.html";
+"~^/doc/biology/about/regimens/fortalg.html$" "/doc/biology/2000-iapac-norvir/regimens/fortalg.html";
+"~^/doc/biology/about/regimens/stadtlanders.html$" "/doc/biology/2000-iapac-norvir/regimens/stadtlanders.html";
+"~^/doc/biology/about/regimens/tebas.html$" "/doc/biology/2000-iapac-norvir/regimens/tebas.html";
+"~^/doc/biology/shoofs.html$" "/doc/biology/2000-iapac-norvir/shoofs.html";
+"~^/doc/biology/tolerability/tolerability.html$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/doc/biology/about/tolerability/abt_dintruff_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol1.html";
+"~^/doc/biology/about/tolerability/abt_dintruff_tol2.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol2.html";
+"~^/doc/biology/about/tolerability/dejar_alc.html$" "/doc/biology/2000-iapac-norvir/tolerability/dejar_alc.html";
+"~^/doc/biology/about/tolerability/farthing.html$" "/doc/biology/2000-iapac-norvir/tolerability/farthing.html";
+"~^/doc/biology/about/tolerability/hirschhorntips.html$" "/doc/biology/2000-iapac-norvir/tolerability/hirschhorntips.html";
+"~^/doc/biology/about/tolerability/royaltips.html$" "/doc/biology/2000-iapac-norvir/tolerability/royaltips.html";
+"~^/doc/darknet-market/2013-1$" "/doc/darknet-market/index";
+"~^/doc/economics/1688-delavega-confusionof$" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
+"~^/doc/iq/192-0-thorndike\.pdf.*$" "/doc/iq/1920-thorndike-2.pdf";
+"~^/doc/member/$" "/static/404";
+"~^/newsletter/63.*$" "/doc/newsletter/index";
+"~^/doc/personal/rss$" "/doc/personal/rss-subscriptions.opml";
+"~^/doc/rotten.com/library/indez.html$" "/doc/rotten.com/library/index.html";
+"~^/doc/sociology\.pdf.*$" "/doc/sociology/index";
+"~^/doc/psychology/music/distraction/2019-wu\.pdf.*$" "/doc/statistics/bias/2019-wu.pdf";
+"~^/doc/tutorial/%C3%B0$" "/doc/tutorial/index";
+"~^/link$" "/me";
+"~^/contact_us.htm$" "/me#contact";
+"~^/nootrp$" "/nootropic/nootropic";
+"~^/plastination/$" "/plastination";
+"~^/top$" "/index";
+"~^/sidenot$" "/sidenotes";
+"~^/static/collapse$" "/static/collapse.js";
+"~^/doc/economics/mechanism-design/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/cs/security/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html/favicon.ico$" "/static/img/favicon.ico";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/mraid.js$" "/static/404";
