--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11461,3 +11461,7 @@ default "";
 "~^/doc/darknet-market/2021-nazah.pdf.*$" "/doc/darknet-market/blackmarket-reloaded/2021-nazah.pdf";
 "~^/doc/darknet-market/2021-harinam.pdf.*$" "/doc/darknet-market/dnm-archive/2021-harinam.pdf";
 "~^/doc/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html.*$" "/doc/psychology/cognitive-bias/illusion-of-depth/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
+"~^/doc/statistics/order/gwern-orderstatistics-multistageselection-n48.png.*$" "/doc/statistics/order/gwern-orderstatistics-multistageselection-n48.jpg";
+"~^/doc/darknet-market/2021-booij.pdf.*$" "/doc/darknet-market/dnm-archive/2021-booij.pdf";
+"~^/doc/ai/nn/rnn/2021-droppo-figure5-lstmvstransfomerscaling.png.*$" "/doc/ai/nn/rnn/2021-droppo-figure5-lstmvstransformerscaling.png";
+"~^/doc/ai/nn/transformer/gpt/2020-kaplan-figure7-rnnsvstransformers.png.*$" "/doc/ai/nn/transformer/gpt/2020-kaplan-figure7-scalingrnnsvstransformersshowsrnnplateau.png";
